<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_folder"
        android:contentDescription="@string/main"
        android:title="@string/main" />


    <item
        android:id="@+id/station"
        android:icon="@drawable/ic_police_station"
        android:contentDescription="@string/police_station"
        android:title="@string/police_station" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_police_cap"
        android:contentDescription="@string/info"
        android:title="@string/info" />

    <item
        android:id="@+id/faq"
        android:icon="@drawable/ic_files"
        android:contentDescription="@string/faq"
        android:title="@string/faq" />


</menu>